--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                 <i class="devicon-bootstrap-plain-wordmark colored"></i>
                 <i class="devicon-git-plain colored"></i>
                 <i class="devicon-github-original colored"></i>
+                <i class="devicon-mongodb-plain-wordmark colored"></i>
+                <i class="devicon-nextjs-original-wordmark colored"></i>
+                <i class="devicon-react-original-wordmark colored"></i>
+                <i class="devicon-express-original-wordmark colored"></i>
+                <i class="devicon-nodejs-plain-wordmark colored"></i>
+                <i class="devicon-npm-original-wordmark"></i>
             </div>
         </div>
     </section>
@@ -135,8 +141,13 @@
     <section style="margin: 50px 0;" id="projects">
         <h1 style="text-align: center; padding: 20px 0 0 0 ; font-family: Quicksand;">WHAT I'VE DONE</h1>
         <p style="text-align: center;">(more coming soon)</p>
-        <div class="projects">
-            <a href="Projects/shopOnline.html" target="blank"><img src="Images/Shop-Online.png" alt="Shop Online Image" width="100%" height="100%"></a>
+        <div class="projectsContainer">
+            <div class="projects">
+                <a href="Projects/shopOnline.html" target="blank"><img src="Images/Shop-Online.png" alt="Shop Online Image" width="100%" height="100%"></a>
+            </div>
+            <div class="projects">
+                <a href="https://minesweeperclone.herokuapp.com/" target="blank"><img src="Images/minesweeper.png" alt="minesweeperclone" width="100%" height="100%"></a>
+            </div>
         </div>
     </section>
 </body>
