added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <!-- Header -->
     <header id="home">
         <nav>
-            <div></div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -54,8 +53,16 @@
             <div class="profile-pic">
                 <img src="Images/profile-pic.jpg" alt="Profile Picture" width="100%" height="100%">
             </div>
-            <p style="padding: 15px;">Thanks for visiting my portfolio. My name is Renaldo and I am a web developer with a passion for front end development and design. I am currently a student at UNISA pursuing a degree in Computer Science, I am also enrolled at Hyperion Development doing a Full Stack Web Development bootcamp. I aspire toward a career that will allow me to channel my creativity through crafting beautiful websites and engaging experiences.</p>
-            <p>When I am not on my computer, I enjoy spending time with my family, hiking and swimming.</p>
+            <p class="about-paragraph">
+                Thanks for visiting my portfolio. My name is Renaldo and I am a web developer with a 
+                passion for front end development and design. I am currently a student at UNISA pursuing a
+                 degree in Computer Science, I am also enrolled at Hyperion Development doing a Full Stack 
+                 Web Development bootcamp. I aspire toward a career that will allow me to channel my 
+                 creativity through crafting beautiful websites and engaging experiences.
+            </p>
+            <p class="about-paragraph">
+                When I am not on my computer, I enjoy spending time with my family, hiking and swimming.
+            </p>
             <div class="proclamations">
                 <h3>SELF PROCLAMATIONS:</h3>
                 <div class="proclamContent">
@@ -115,11 +122,11 @@
     </section>
 
     <!-- Experience -->
-    <section style="margin: 50px;" id="experience">
+    <section id="experience">
         <h1 style="text-align: center; padding: 20px 0 0 0 ; font-family: Quicksand;">EXPERIENCE</h1>
-        <p style="text-align: center; width: 50%; margin: auto;">I have been doing web development for about 1 year now, and I am always eager to learn more in this fast paced industry.</p>
+        <p style="text-align: center; width: 100%; margin: auto;">I have been doing web development for about 1 year now, and I am always eager to learn more in this fast paced industry.</p>
         <div style="margin: 50px; width: 90%;">
-            <h5 style="padding-left: 20px;">SOME TECHNOLOGIES I'VE WORKED WITH:</h5>
+            <h5>SOME TECHNOLOGIES I'VE WORKED WITH:</h5>
             <div class="technologies">
                 <i class="devicon-html5-plain-wordmark colored"></i>
                 <i class="devicon-css3-plain colored"></i>
