--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
             <div class="projects">
                 <a href="https://minesweeperclone.herokuapp.com/" target="blank"><img src="Images/minesweeper.png" alt="minesweeperclone" width="100%" height="100%"></a>
             </div>
+            <div class="projects">
+                <a href="https://weather-sa-app.herokuapp.com/" target="blank"><img src="Images/weather.png" alt="weather-sa-app" width="100%" height="100%"></a>
+            </div>
         </div>
     </section>
 </body>
