--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <section class="cv">
         <div class="banner">
             <h1 style="text-align: center; padding: 20px 0 0 0 ; font-family: Quicksand;">CHECK OUT MY CV!</h1>
-            <a href="Images/Renaldo Hake.pdf" download>Grab A Copy</a>
+            <a href="Images/Renaldo-Hake.pdf" download>Grab A Copy</a>
         </div>
     </section>
 
