--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <p style="text-align: center;">(more coming soon)</p>
         <div class="projectsContainer">
             <div class="projects">
-                <a href="Projects/shopOnline.html" target="blank"><img src="Images/Shop-Online.png" alt="Shop Online Image" width="100%" height="100%"></a>
+                <a href="https://renaldo-hake.github.io/shopOnlineEcommerse/index.html" target="blank"><img src="Images/Shop-Online.png" alt="Shop Online Image" width="100%" height="100%"></a>
             </div>
             <div class="projects">
                 <a href="https://minesweeperclone.herokuapp.com/" target="blank"><img src="Images/minesweeper.png" alt="minesweeperclone" width="100%" height="100%"></a>
